Finish Etch-a-Sketch UI and Logic

--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <button class="number-of-squares-btn">New Grid</button>
-        <div class="container-div">
+        <h1 class="heading">Etch-a-Sketch</h1>
+        <div class="container">
+            <div class="btn-container">
+                <button class="number-of-squares-btn">New Grid</button>
+                <button class="clear-btn">Clear</button>
+            </div>
+            
+            <div class="container-div">
+        </div>
+        
         </div>
         <script src="script.js"></script>
     </body>
